# multi-agent-scheming-eval

./: .env.example  .gitignore  EXPERIMENT_LOG.md  README.md  config.py  main.py  pyproject.toml
agents/: research_agent.py  review_agent.py
data/: ground_truth.json
data/results/: 2026-05-22T15-20-02_control.jsonl  2026-05-22T15-24-13_control.jsonl  2026-05-22T15-26-11_control.jsonl  2026-05-22T15-42-25_control.jsonl  2026-05-22T16-10-57_control.jsonl  2026-05-22T16-16-39_control.jsonl  2026-05-22T16-22-34_control.jsonl
evals/: cases.py  conditions.py  metrics.py  runner.py
pipeline/: runner.py
prompts/research_agent/: control.py  scheming_strong.py  scheming_weak.py
prompts/review_agent/: control.py  monitored.py  scheming_strong.py  scheming_weak.py  unmonitored.py
schemas/: __init__.py  experiment.py  research.py  review.py
tools/: human_review.py  mock_search.py
