[project]
name = "multi-agent-scheming-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire[pydantic-ai]>=4.33.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-ai[anthropic,openai]>=1.99.0",
]
